fixed footer alignment

--- a/react-portfolio-project/src/components/Footer/Footer.css
+++ b/react-portfolio-project/src/components/Footer/Footer.css
@@ -4,6 +4,10 @@
 
 .footer {
   background-color: #f0a1d6;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .sb_footer {
